--- a/recipes.html
+++ b/recipes.html
@@ -53,8 +53,14 @@
       .ingredients {
       border-right: none;
       }
+      .directions:hover, .ingredients:hover {
+      border-left: 5px solid #ff9900 !important;
+      }
+      #pumpkinbread {
+        float: left;
+      }
     </style>
-    <title>Dominic's Website | Espresso Business</title>
+    <title>Dominic's Website | Recipes</title>
   </head>
   <body>
     <h1 class="center font1">Dominic's Recipes</h1>
@@ -66,7 +72,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <div id="bananabread" class="content">
-      <p class="white font1">For Banana Bread:</p>
+      <p class="white font1">For 1 Loaf of Banana Bread:</p>
       <div class="ingredients">
         <h3 class="white font1" style="color: orange !important;">Ingredients:</h3>
         <ul class="font2" style="background-color: #000000 !important; width: 250px;">
@@ -83,14 +89,45 @@
       <div class="directions">
         <h3 class="font2" style="color: orange !important;">Directions</h3>
         <ul class="expanded font2" style="background-color: #000000 !important; width: 250px">
-          <li>1. Preheat oven to 350º / 180º.</li>
+          <li>1. Preheat oven to 350º.</li>
           <li>2. Cream together butter and sugar.</li>
           <li>3. Add eggs and crushed bananas.</li>
           <li>4. Combine well.</li>
           <li>5. Sift together flour, soda and salt. Add to creamed mixture. Add vanilla.</li>
           <li>6. Mix just until combined. Do not overmix.</li>
           <li>7. Pour into greased and floured loaf pan.</li>
-          <li>8. Bake at 350º / 180º for 55 minutes.</li>
+          <li>8. Bake at 350 for 55 minutes.</li>
+        </ul>
+      </div>
+      <div id="pumpkinbread" class="content">
+      <p class="white font1">For 2 Loafs of Pumpkin Bread:</p>
+      <div class="ingredients">
+        <h3 class="white font1" style="color: orange !important;">Ingredients:</h3>
+        <ul class="font2" style="background-color: #000000 !important; width: 250px;">
+          <li>-2 Cups Flour</li>
+          <li>-1 Teaspoon Baking Soda</li>
+          <li>-1/2 Teaspoon Baking Powder</li>
+          <li>-1/2 Teaspoon Salt</li>
+          <li>-Opt: 1 Teaspoon Cloves</li>
+          <li>-Opt: 1 Teaspoon Cinnamon</li>
+          <li>-Opt: 1 Teaspoon Nutmeg</li>
+          <li>-1 Teaspoon Vanilla</li>
+          <li>-3/4 Cup Butter</li>
+          <li>-2 Cups Sugar</li>
+          <li>-2 Eggs</li>
+          <li>-1 15OZ Can of Pumpkin</li>
+        </ul>
+      </div>
+      <div class="directions">
+        <h3 class="font2" style="color: orange !important;">Directions</h3>
+        <ul class="expanded font2" style="background-color: #000000 !important; width: 250px">
+          <li>1. Preheat oven to 325º, grease 2 loaf pans and dust with flour.</li>
+          <li>2. In a medium bowl, combine the flour, salt, baking soda, baking powder, cloves, cinnamon, and nutmeg. Whisk until well combined; set aside.</li>
+          <li>3. Beat the butter and sugar on medium speed until just blended. Add the eggs one at a time, beating well after each addition. Continue beating until very light and fluffy, a few minutes.</li>
+          <li>4. Beat in the pumpkin.</li>
+          <li>5. Add the flour mixture and mix.</li>
+          <li>6. Divide the batter amongst the greased pans.</li>
+          <li>7. Bake at 325°, for 65-75 minutes.</li>
         </ul>
       </div>
     </div>
