--- a/recipes.html
+++ b/recipes.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script></script>
+    <script>
+    </script>
     <style>
       body {
       background-color: black;
@@ -13,14 +14,14 @@
       font-family: "Century Gothic";
       color: #00bfff;
       }
-      ul {
+      .nav {
       list-style-type: none;
       margin: 0;
       padding: 0;
       width: 200px;
       background-color: #303030;
       }
-      li a {
+      .nav a {
       display: block;
       color: #00bfff;
       padding: 8px 16px;
@@ -57,13 +58,27 @@
       border-left: 5px solid #ff9900 !important;
       }
       #pumpkinbread {
-        float: left;
+        clear: both;
+      }
+      #title {
+        position: relative;
+        left: 200px;
+      }
+      #title span {
+        font-size: 30px;
+        transition: font-size 1s;
+        position: absolute;
+      }
+      #title span:hover {
+        font-size: 100px;
+        -webkit-transition: width 2s;
+        transition: font-size .5s;
       }
     </style>
     <title>Dominic's Website | Recipes</title>
   </head>
   <body>
-    <h1 class="center font1">Dominic's Recipes</h1>
+    <h1 id="title" class="font1"><span>Dominic's Recipes</span></h1>
     <ul class="nav">
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
@@ -99,7 +114,8 @@
           <li>8. Bake at 350 for 55 minutes.</li>
         </ul>
       </div>
-      <div id="pumpkinbread" class="content">
+    </div>
+    <div id="pumpkinbread" class="content">
       <p class="white font1">For 2 Loafs of Pumpkin Bread:</p>
       <div class="ingredients">
         <h3 class="white font1" style="color: orange !important;">Ingredients:</h3>
