--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -57,6 +57,7 @@
         <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
         <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
         <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
+        <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html"
         <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <p style="color: white;">Nuttin here yet!</p>
