--- a/dominicshop.html
+++ b/dominicshop.html
@@ -8,30 +8,41 @@
         font-family: "Century Gothic";
         color: #00bfff;
         }
-        ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 200px;
-        background-color: #303030;
-        }
-        li a {
-        display: block;
-        color: #00bfff;
-        padding: 8px 16px;
-        text-decoration: none;
-        font-family: "Century Gothic";
-        font-weight: bold;
-        }
-        li a:hover {
-        background-color: #00bfff;
-        }
-        a:hover {
-        color: #ffffff !important;
-        }
-	p {
-	    color: #00bfff;
-	}
+              .nav {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #303030;
+      }
+      .nav a {
+      display: block;
+      color: #00bfff;
+      padding: 8px 16px;
+      text-decoration: none;
+      font-family: "Century Gothic";
+      font-weight: bold;
+      }
+      li a:hover {
+      background-color: #00bfff;
+      }
+      a:hover {
+      color: #ffffff !important;
+      }
+      #title {
+      position: relative;
+      left: 200px;
+      }
+      #title span {
+      font-size: 30px;
+      transition: font-size 1s;
+      position: absolute;
+      }
+      #title span:hover {
+      font-size: 100px;
+      -webkit-transition: width 2s;
+      transition: font-size .5s;
+      }
     </style>
     <script></script>
     <head>
@@ -45,6 +56,6 @@
 	    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
-	<p>Nothing here yet. Go on my chat and send a message saying what <i>Yu-Gi-Oh!</i> cards you need</p>
+	<p>Nothing here yet. I may in the future include a link to a Wix.com shop. I do sell origami, though, just I only accept cash.</p>
     </body>
 </html>
