--- a/dominicchat.html
+++ b/dominicchat.html
@@ -56,9 +56,8 @@
     <ul class="nav">
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-      <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
-      <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html"
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
