--- a/dominicshop.html
+++ b/dominicshop.html
@@ -8,6 +8,10 @@
         font-family: "Century Gothic";
         color: #00bfff;
         }
+	    .white {
+	    	font-family: "Century Gothic";
+		color: #ffffff;
+	    }
               .nav {
       list-style-type: none;
       margin: 0;
@@ -49,13 +53,13 @@
         <h1 class="font1">Dominic's Shop</h1>
     </head>
     <body>
-        <ul>
+        <ul class="nav">
             <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
 	    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
-	<p>Nothing here yet. I may in the future include a link to a Wix.com shop. I do sell origami, though, just I only accept cash.</p>
+	<p class="white">Nothing here yet. I may in the future include a link to a Wix.com shop. I do sell origami, though, just I only accept cash.</p>
     </body>
 </html>
