--- a/dominicchat.html
+++ b/dominicchat.html
@@ -52,7 +52,7 @@
     <title>Dominic's Website | Dominic's Chat</title>
   </head>
   <body>
-    <h1 id="title" class="font1"><span>Dominic's Espresso Business</span></h1>
+    <h1 id="title" class="font1"><span>Dominic's Chat</span></h1>
     <ul class="nav">
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
