--- a/dominicshop.html
+++ b/dominicshop.html
@@ -57,6 +57,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <p class="white">Nothing here yet. I may in the future include a link to a Wix.com shop. I do sell origami, though, just I only accept cash.</p>
