--- a/dominicshop.html
+++ b/dominicshop.html
@@ -50,7 +50,7 @@
   </style>
   <script></script>
   <head>
-    <h1 class="font1">Dominic's Shop</h1>
+    <h1 id="title" class="font1"><span>Dominic's Shop</span></h1>
   </head>
   <body>
     <ul class="nav">
