--- a/dominicshop.html
+++ b/dominicshop.html
@@ -50,6 +50,7 @@
   </style>
   <script></script>
   <head>
+    <title>Dominic's Website | Shop</title>
     <h1 id="title" class="font1"><span>Dominic's Shop</span></h1>
   </head>
   <body>
