--- a/dominicchat.html
+++ b/dominicchat.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script></script>
+    <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
     <style>
       body {
       background-color: black;
@@ -49,7 +50,7 @@
       transition: font-size .5s;
       }
     </style>
-    <title>Dominic's Website | Dominic's Chat</title>
+    <title>Dominic's Website | Chat</title>
   </head>
   <body>
     <h1 id="title" class="font1"><span>Dominic's Chat</span></h1>
