--- a/dominicshop.html
+++ b/dominicshop.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <script>
+  </script>
+  <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
   <style>
     body {
     background-color: #000000;
