--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
         <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
+        <p class="text-fix center" style="font-family: 'Century Gothic'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
     </body>
 </html>
