--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
             <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html"</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
         <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
-        <p class="text-fix center" style="font-family: 'Century Gothic'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
+        <p class="text-fix center" style="font-family: 'Century Gothic;'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
+        <p class="text-fix center" style="font-family: 'Century Gothic;'"><span style="color: orange;">UPDATE:</span> I am adding a comments section. Click the new link on the nav bar on the left to go to it! I may have some minor bugs, I will try to get those fixed. You can also report bugs and suggest ideas in the comments section.</p>
     </body>
 </html>
