--- a/comments.html
+++ b/comments.html
@@ -2,7 +2,7 @@
 <html>
   <style>
     body {
-    background-color: #000000;
+    background-color: #A9A9A9;
     }
     .font1 {
     font-family: "Century Gothic";
