--- a/comments.html
+++ b/comments.html
@@ -47,6 +47,9 @@
     -webkit-transition: width 2s;
     transition: font-size .5s;
     }
+    .author, .date {
+    color: orange !important;
+    }
   </style>
   <script></script>
   <head>
