--- a/comments.html
+++ b/comments.html
@@ -61,6 +61,7 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>
     <!-- begin wwww.htmlcommentbox.com -->
