--- a/dominicchat.html
+++ b/dominicchat.html
@@ -59,8 +59,8 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-    </ul>
-    <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
+    </ul>    <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
   </body>
 </html>
