--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -52,13 +52,14 @@
 </head>
 <body>
     <h1 id="title" class="font1"><span>Dominic's Espresso Business</span></h1>
-    <ul class="nav">
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-    </ul>
+     <ul class="nav">
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+</ul>
     <p style="color: white;">Nuttin here yet!</p>
     <p style="color: white;">Still starting up business. I have the supplies, but I still need a vendor's licence and a food handler's licence. A vendor's licence is $400/year and a food handler's licence is not very expensive. I am accepting donations.</p>
 </body>
