--- a/comments.html
+++ b/comments.html
@@ -50,6 +50,12 @@
     .author, .date {
     color: orange !important;
     }
+    #HCB_comment_box #hcb_form_content,
+    #HCB_comment_box #hcb_form_email, 
+    #HCB_comment_box #hcb_form_name, 
+    #HCB_comment_box #hcb_form_website {
+    background-color:#000080;
+    }
   </style>
   <script></script>
   <head>
