--- a/dominicchat.html
+++ b/dominicchat.html
@@ -11,7 +11,7 @@
       text-align: center;
       }
       .font1 {
-      font-family: "Century Gothic";
+      font-family: "Century Gothic", Arial;
       color: #00bfff;
       }
       .nav {
@@ -26,7 +26,7 @@
       color: #00bfff;
       padding: 8px 16px;
       text-decoration: none;
-      font-family: "Century Gothic";
+      font-family: "Century Gothic", Arial;
       font-weight: bold;
       }
       li a:hover {
@@ -62,5 +62,6 @@
       <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
       <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
     </ul>    <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
+    <h3 class="font1">Also you can chat on my Discord server located <a href="https://discord.gg/YTxPb2n">here</a>.</h3>
   </body>
 </html>
