--- a/index.html
+++ b/index.html
@@ -1,82 +1,110 @@
+
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="daonlydominic.github.io/DominicWebsite/script.js"></script>
-        <script>
-            
-        </script>
-        <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
-        <style>
-            .imagetext {
-            font-family: impact;
-            font-size: 100px;
-            color: rgb(255, 255, 255);
-            text-transform: uppercase;
-            background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
-            animation-name: example;
-            animation-duration: 4s;
-            }
-            .center {
-            text-align: center;
-            }
-            body {
-            background-color: black;
-            }
-            .text-fix {
-            color: rgb(255, 255, 255);
-            }
-            a {
-            text-decoration: none !important;
-            color: #00bfff !important;
-            }
-            ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            width: 200px;
-            background-color: #303030;
-            }
-            li a {
-            display: block;
-            color: #00bfff;
-            padding: 8px 16px;
-            text-decoration: none;
-            font-family: "Century Gothic";
-            font-weight: bold;
-            }
-            li a:hover {
-            background-color: #00bfff;
-            }
-            a:hover {
-            color: #ffffff !important;
-            }
-            @keyframes example {
-              0%   {color: red;}
-              12.5%  {color: orange;}
-              25%  {color: yellow;}
-              50% {color: green;}
-              62.5% {color: blue}
-              75% {color: purple}
-              87.5% {color: black}
-              100% {color: white}
-}
-            <link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
-        </style>
-        <title>Welcome! | Dominic's Website</title>
-    </head>
-    <body>
-        <h1 class="center imagetext">Welcome to my Website!</h1>
-        <p style="color: red !important; font-family: arial !important; float: right;">Version: 2.2</p>
-        <ul>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-        </ul>
-        <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
-        <p class="text-fix center" style="font-family: 'Century Gothic;'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
-        <p class="text-fix center" style="font-family: 'Century Gothic;'"><span style="color: orange;">UPDATE:</span> <span style="font-family: Arial; color: #00bfff;">I am adding a comments section. Click the new link on the nav bar on the left to go to it! I may have some minor bugs, I will try to get those fixed. You can also report bugs and suggest ideas in the comments section.</span></p>
-    </body>
+  <head>
+    <script src="daonlydominic.github.io/DominicWebsite/script.js"></script>
+    <script></script>
+    <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
+    <style>
+      .imagetext {
+      font-family: impact;
+      font-size: 100px;
+      color: rgb(255, 255, 255);
+      text-transform: uppercase;
+      background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+      animation-name: example;
+      animation-duration: 4s;
+      }
+      .center {
+      text-align: center;
+      }
+      body {
+      background-color: black;
+      }
+      .text-fix {
+      color: rgb(255, 255, 255);
+      }
+      a {
+      text-decoration: none !important;
+      color: #00bfff !important;
+      }
+      ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #303030;
+      }
+      li a {
+      display: block;
+      color: #00bfff;
+      padding: 8px 16px;
+      text-decoration: none;
+      font-family: "Century Gothic";
+      font-weight: bold;
+      }
+      li a:hover {
+      background-color: #00bfff;
+      }
+      a:hover {
+      color: #ffffff !important;
+      }
+      @keyframes example {
+      0%   {color: red;}
+      12.5%  {color: orange;}
+      25%  {color: yellow;}
+      50% {color: green;}
+      62.5% {color: blue}
+      75% {color: purple}
+      87.5% {color: black}
+      100% {color: white}
+      }
+      #main-content {
+      background-color: #000010;
+      color: #ffffff;
+      font-family: "Century Gothic", Arial;
+      border-color: #ffffff;
+      border-style: solid;
+      border-radius: 25px;
+      padding-left: 10px;
+      }
+      #title {
+      background-color: #14161b !important;
+      border-radius: 25px;
+      overflow: hidden;
+      }
+      #title h2 {
+      color: #00bfff !important;
+      font-family: "Century Gothic", Arial !important;
+      text-align: center;
+      }
+      <link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
+    </style>
+    <title>Welcome! | Dominic's Website</title>
+  </head>
+  <body>
+    <h1 class="center imagetext">Welcome to my Website!</h1>
+    <p style="color: red !important; font-family: arial !important; float: right;">Version: 2.3</p>
+    <ul>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My shop</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/recipes.html">Recipes</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite/comments.html">Comments</a></li>
+      <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+    </ul>
+    <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
+    <p class="text-fix center" style="font-family: 'Century Gothic;'">This page was created by Dominic Motekaitis, with HTML, CSS, and JS</p>
+    <div id="main-content">
+      <div id="title">
+        <h2>Updates and Stuff:</h2>
+      </div>
+      <p>Not much here yet.</p>
+      <a href="https://discord.gg/YTxPb2n">Link to join my Discord server</a>
+      <p class="text-fix" style="font-family: 'Century Gothic', Arial;"><span style="color: orange;">UPDATE:</span> <span style="font-family: "Century Gothic", Arial; color: #00bfff;">I have added a comments section. Click the new link on the nav bar on the left to go to it! You can report bugs and suggest ideas in the comments section</span></p>
+    </div>
+  </body>
 </html>
+
+
