--- a/comments.html
+++ b/comments.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <script>
+  </script>
   <style>
     body {
     background-color: #000000;
@@ -55,6 +57,16 @@
     #HCB_comment_box #hcb_form_name, 
     #HCB_comment_box #hcb_form_website {
     background-color:#000080;
+    }
+    .gravatar {
+    display: block;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: url(//daonlydominic.github.io/DominicWebsite/avatar.png) no-repeat;
+    width: 100px;
+    height: 100px;
+    padding-left: 100px;
+    background-size: 75%;
     }
   </style>
   <script></script>
